# todo_app

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_users.py  utils.py
todo_app/: alembic.ini  database.py  main.py  models.py  todosapp.db
todo_app/alembic/: env.py
todo_app/alembic/versions/: 4cd456a025da_add_middle_name_to_user.py  e141ce029d31_create_phone_number_for_user_column.py
todo_app/routers/: admin.py  auth.py  todos.py  users.py
todo_app/static/js/: base.js
todo_app/templates/: add-todo.html  edit-todo.html  home.html  layout.html  navbar.html  register.html  todo.html
