[tool.poetry]
name = "todo_app"
version = "0.0.0"
description = "ToDo App using FastAPI and SQLite"
authors = ["manojnd9 <manojnd9@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.0"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.36"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-multipart = "^0.0.20"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
