[tool.poetry]
name = "todo_app"
version = "0.0.0"
description = "ToDo App using FastAPI and SQLite"
authors = ["manojnd9 <manojnd9@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.0"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.36"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-multipart = "^0.0.20"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg2-binary = "^2.9.10"
pymysql = "^1.1.1"
aiofiles = "^24.1.0"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

